<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Version & Info -->
    <af.shizuku.manager.settings.CollapsiblePreferenceCategory
        android:title="@string/settings_about"
        android:key="category_about_info"
        android:defaultValue="true">

        <Preference
            android:key="version"
            android:title="@string/settings_version"
            android:icon="@drawable/ic_info_24" />

        <Preference
            android:key="changelog"
            android:title="@string/about_changelog_title"
            android:summary="@string/about_changelog_summary"
            android:icon="@drawable/ic_history_24" />

        <Preference
            android:key="website"
            android:title="@string/about_website_title"
            android:summary="https://shizukux.xyz"
            android:icon="@drawable/ic_baseline_link_24" />

        <Preference
            android:key="qq_group"
            android:title="@string/about_qq_group_title"
            android:summary="@string/about_qq_group_summary"
            android:icon="@drawable/ic_group_24" />

        <Preference
            android:key="source_code"
            android:title="@string/about_view_source_code_title"
            android:summary="https://github.com/qianyumeng0228/ReShizukuX"
            android:icon="@drawable/ic_baseline_link_24" />

        <Preference
            android:key="open_source_licenses"
            android:title="@string/settings_open_source_licenses"
            android:summary="@string/settings_open_source_licenses_summary"
            android:icon="@drawable/ic_article_24" />

        <Preference
            android:key="nav_developer_options"
            android:title="@string/settings_developer_options"
            android:summary="@string/settings_developer_options_summary"
            android:icon="@drawable/ic_terminal_24"
            android:fragment="af.shizuku.manager.settings.DeveloperOptionsFragment"
            android:visible="false" />

    </af.shizuku.manager.settings.CollapsiblePreferenceCategory>

</PreferenceScreen>
